syntax = "proto3";

option go_package = "album/service";

package service;

message GetAlbumsRequest {

} 

message Album {
    int32 id = 1;
    string title = 2;
    string artist = 3; 
    float price = 4;
}

message GetAlbumsResponse {
    repeated Album albums = 1;  
} 
