syntax = "proto3";

option go_package = "pb/music";

package service;

import "models.proto";

service MusicService {
    rpc GetAlbumList(GetAlbumsRequest) returns (GetAlbumsResponse) {};
}